// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Processor should process images from data-src 1`] = `
<div>
  <mocked-img
    alt="Silea"
    data-src="https://sileajs.com/logo.png"
    src="https://sileajs.com/logo.png"
    width="500"
  />
</div>
`;

exports[`Image Processor should process images from src 1`] = `
<div>
  <mocked-img
    alt="Silea"
    src="https://sileajs.com/logo.png"
    width="500"
  />
</div>
`;
